tests/negative/test_cn_asgn_cn_arr.orb
fnc main() {
    let i32[4] cn array{0, 1, 2, 3};
    array[0] = 100;
}